--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -136,7 +136,7 @@
 
     <div class="site-footer__logo one-sixth">
       <div class="footer-header">Marca</div>
-      <img src="{{ 'aro-logo-footer.png' | asset_url }}" title="Aro Swimwear" alt="Logo Aro Swimwear" width="150" />
+      <img src="{{ 'venus-logo-footer.png' | asset_url }}" title="Aro Swimwear" alt="Logo Aro Swimwear" width="150" />
     </div>
 
     <div class="site-footer__mais one-sixth">
