--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -35,7 +35,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
   });
 </script>
 
-<h1 class="home-title">Oi, como você quer escolher o seu novo Aro+Vênus?</h1>
+<h1 class="home-title">Oi, como você quer escolher o seu novo Vênus Atômica?</h1>
 
 <div class="page-width">
   <div class="size-selector--home">
