--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -4,6 +4,17 @@
 {% endunless %}
 Script acima redireciona home para "todos", remover o bloco para voltar ao comportamento normal
 {% endcomment %}
+
+{% section 'feature-row' %}
+{% section 'feature-columns' %}
+{% section 'header' %}
+{% section 'footer' %}
+{% section 'header2' %}
+{% section 'hero' %}
+{% section 'image-bar' %}
+{% section '' %}
+{% section '' %}
+
 <script>
   document.documentElement.style.setProperty("--homegrad", '59%');
   
