--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,14 +5,17 @@
 Script acima redireciona home para "todos", remover o bloco para voltar ao comportamento normal
 {% endcomment %}
 
-
-
-
+{% section 'feature-row' %}
+{% comment %}
+{% section 'feature-columns' %}
+{% section 'header' %}
+{% section 'footer' %}
 {% section 'header2' %}
 {% section 'hero' %}
 {% section 'image-bar' %}
 {% section '' %}
 {% section '' %}
+{% endcomment %}
 
 <script>
   document.documentElement.style.setProperty("--homegrad", '59%');
