--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -7,15 +7,15 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
 
 
 
-{% section 'header2' %}
+{% section 'hero' %}
 {% comment %}
 {% section 'feature-row' %}
 {% section 'feature-columns' %}
-{% section 'image-bar' %}
-{% section 'footer' %}
+{% section 'image-bar' %} vazio
+{% section 'footer' %} vazio
 {% section 'header' %}
+{% section 'header2' %} vazio
 
-{% section 'hero' %}
 
 {% section '' %}
 {% section '' %}
