--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -7,7 +7,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
 
 
 
-
+{% section 'header' %}
 {% comment %}
 {% section 'feature-row' %}
 {% section 'feature-columns' %}
