--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -71,4 +71,4 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
   </div>
 </div>
 
-{% comment %} {{ content_for_index }} {% endcomment %}
+{{ content_for_index }}
