--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,7 +5,8 @@
 {% endunless %}
 Script acima redireciona home para "todos", remover o bloco para voltar ao comportamento normal
 {% endcomment %}
-
+{% section 'header' %}
+{% section 'header2' %}
 {{ content_for_index }}
 
 <script>
