--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -8,7 +8,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
 {% section 'header' %}
 {% section 'header2' %}
 {{ content_for_index }}
-
+{% comment %}
 <script>
   document.documentElement.style.setProperty("--homegrad", '59%');
   
@@ -72,3 +72,4 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
     </div>
   </div>
 </div>
+{% endcomment %}
