--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,4 +1,3 @@
-
 {% comment %}
 {% unless template != 'index' %}
 <script> window.location.replace( '/collections/todos' ); </script>
@@ -19,7 +18,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
   </div>
 </div>
 
-{% section 'header' %}
+{% section 'footer' %}
 
 
 <div class="page-width">
