--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,7 +5,7 @@
 Script acima redireciona home para "todos", remover o bloco para voltar ao comportamento normal
 {% endcomment %}
 
-
+{% section 'header2' %}
 
 <div class="page-width">
   <div class="size-selector--home">
@@ -19,6 +19,20 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
 </div>
 
 {% section 'footer' %}
+
+
+<div class="page-width">
+  <div class="size-selector--home">
+    <a class="size-selector-btn" href="/collections/p">P</a>
+    <a class="size-selector-btn" href="/collections/m">M</a>
+    <a class="size-selector-btn" href="/collections/g">G</a>
+    <a class="size-selector-btn" href="/collections/gg">GG</a>
+    <a class="size-selector-btn" href="/collections/eg">EG</a>
+    <a class="size-selector-btn" href="/collections/egg">EGG</a>
+  </div>
+</div>
+
+{% section 'header' %}
 
 
 <div class="page-width">
