--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -17,7 +17,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
   </div>
 </div>
 
-{% section 'header2' %}
+{% section 'header' %}
 
 <div class="page-width">
   <div class="size-selector--home">
