--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -29,7 +29,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
     <a class="size-selector-btn" href="/collections/egg">EGG</a>
   </div>
 </div>
-
+{% section 'header2' %}
 {% section 'footer' %}
 
 
