--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -68,7 +68,7 @@
 <footer class="site-footer" role="contentinfo">
   <div class="site-footer__content">
     <div class="site-footer__newsletter two-sixths">
-      <div class="footer-header">Assine nossa newsletter</div>
+      <div class="footer-header">Assine nossa newsletter!</div>
       {%- assign formId = 'ContactFooter' -%}
       {% form 'customer', id: formId, novalidate: 'novalidate' %}
         {%- if form.posted_successfully? -%}
