--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,16 +6,7 @@ Script acima redireciona home para "todos", remover o bloco para voltar ao compo
 {% endcomment %}
 
 
-<div class="page-width">
-  <div class="size-selector--home">
-    <a class="size-selector-btn" href="/collections/p">P</a>
-    <a class="size-selector-btn" href="/collections/m">M</a>
-    <a class="size-selector-btn" href="/collections/g">G</a>
-    <a class="size-selector-btn" href="/collections/gg">GG</a>
-    <a class="size-selector-btn" href="/collections/eg">EG</a>
-    <a class="size-selector-btn" href="/collections/egg">EGG</a>
-  </div>
-</div>
+{% section 'size-selector' %}
 
 {% section 'header' %}
 
