--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,7 +5,9 @@
 Script acima redireciona home para "todos", remover o bloco para voltar ao comportamento normal
 {% endcomment %}
 {% section 'header' %}
+{% section 'footer' %}
 {{ content_for_index }}
+
 
 {% section 'size-selector' %}
 
