--- a/sections/size-selector.liquid
+++ b/sections/size-selector.liquid
@@ -7,4 +7,24 @@
       <a class="size-selector-btn" href="/collections/eg">EG</a>
       <a class="size-selector-btn" href="/collections/egg">EGG</a>
     </div>
+  
+    <div class="home-bottom">
+      <div class="home-bottom--right">
+        <div class="home-text">
+          Entre e fique à vontade. <br/>
+          Entendemos que não faz sentido escolher uma peça através de um corpo que não te represente. Por isso, te convidamos a escolher um tamanho que te seja familiar e então mostraremos todas as peças em um formato que faça mais sentido pra você.
+        </div>
+  
+        <a class="home-textinho" href="/pages/por-que-aro">(Quer saber por que nos juntamos?, clique aqui - é só o começo)</a>
+      </div>
+  
+      <div class="home-bottom--left">
+        <a class="btn-link btn-dont-know-size" href="/collections/todos/">
+          <span class="flex justify-between items-center">
+            <span>Quero ver todos os tamanhos juntos.</span>
+            <span class="icon-arrow">{% render 'aro-go' %}</span>
+          </span>
+        </a>
+      </div>
+    </div>
   </div>
