--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -425,7 +425,7 @@ $z-index-announcement-bar: 10;
 $z-index-skip-to-content: 10000; // really high to be safe of app markup
 
 /*================ SVG ================*/
-$svg-select-icon: #{'//cdn.shopify.com/s/files/1/1342/1503/t/6/assets/ico-select.svg?v=14603861084055929462'};
+$svg-select-icon: #{''};
 
 /*================ Drawers ================*/
 $transition-drawer: all 0.45s cubic-bezier(0.29, 0.63, 0.44, 1);
