--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -425,7 +425,7 @@ $z-index-announcement-bar: 10;
 $z-index-skip-to-content: 10000; // really high to be safe of app markup
 
 /*================ SVG ================*/
-$svg-select-icon: #{''};
+$svg-select-icon: #{'//cdn.shopify.com/s/files/1/1342/1503/t/6/assets/ico-select.svg?v=14603861084055929462'};
 
 /*================ Drawers ================*/
 $transition-drawer: all 0.45s cubic-bezier(0.29, 0.63, 0.44, 1);
@@ -444,11 +444,11 @@ $font-weight-body--bold: 700;
 $font-weight-body--bolder: 700;
 $font-weight-header--bold: 700;
 
-$font-stack-header: "Favorit Bold", sans-serif;
+$font-stack-header: "Arial", sans-serif;
 $font-style-header: normal;
 $font-weight-header: normal;
 
-$font-stack-body: "Favorit Light", sans-serif;
+$font-stack-body: "Arial", sans-serif;
 $font-style-body: normal;
 $font-weight-body: 500;
 
