--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -462,11 +462,11 @@ $font-weight-body--bold: {{ base_font_bold.weight | default: 700 }};
 $font-weight-body--bolder: {{ base_font_bolder.weight | default: 700 }};
 $font-weight-header--bold: {{ header_font_bold.weight | default: 700 }};
 
-$font-stack-header: "Favorit Bold", {{ header_font.fallback_families }};
+$font-stack-header: "Arial", {{ header_font.fallback_families }};
 $font-style-header: {{ header_font.style }};
 $font-weight-header: normal;
 
-$font-stack-body: "Favorit Light", {{ base_font.fallback_families }};
+$font-stack-body: "Arial", {{ base_font.fallback_families }};
 $font-style-body: {{ base_font.style }};
 $font-weight-body: 500;
 
