--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,3 +1,7 @@
+{% comment %} <div class="footer-mais__extra">
+  Site por <a href="https://aparelho.tv/">Aparelho</a>.
+</div> {% endcomment %}
+
 {%- assign social_icons = false -%}
 {%- assign inline_list = false -%}
 {%- assign locale_selector = false -%}
