--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -17,7 +17,7 @@
 
 <div data-section-id="{{ section.id }}" data-section-type="header-section" class="header flex items-center justify-between absolute">
   <div class="sidebar-menu nav-element">
-    <button class="btn-link">Menu</button>
+    <button class="btn-link">Menu1</button>
   </div>
 
   <div class="main-nav">
