--- a/sections/header2.liquid
+++ b/sections/header2.liquid
@@ -54,7 +54,7 @@
 {% else %}
 <div data-section-id="{{ section.id }}" data-section-type="header-section" class="header header--desktop flex items-center justify-between absolute">
   <div class="sidebar-menu nav-element">
-    <button class="btn-link sidebar-menu-button">Menu</button>
+    <button class="btn-link sidebar-menu-button">Menu2</button>
     <div class="sidebar-menu-wrapper">
       {% render 'sidebar-menu' %}
     </div>
