--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -209,6 +209,9 @@
           Agregados
         </button>
       {% endcomment %}
+      <button class="btn-link">
+        <a href="../pages/politica-de-trocas-e-devolucoes">Trocas e Devoluções</a>
+      </button>
         <div class="btn-link btn-medidas">
           <span class="btn-medidas-text">Tabela de Medidas</span>
           <div class="tabela-medidas">
@@ -264,9 +267,7 @@
             </div>
           </div>
         </div>
-        <button class="btn-link">
-          <a href="../pages/politica-de-trocas-e-devolucoes">Refund Policy</a>
-        </button>
+
       </div>
     </div>
 
