--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,11 +1,11 @@
  {% assign tagsPath = '' %}
-    {% if collection.handle == "sob encomenda" %}
+    {% if collection.handle == "encomendas" %}
         <div class="aro-symbol--ss">
             <a class="icon-link" href="/">{% render 'aro-symbol-cat-page' %}</a>
           </div>
           {% else %}
-          <div class="size-selector__label">
-            Filtre aqui a disponibilidade das peças no seu tamanho:
+          <div>
+            :
           </div>
     {% endif %}
   
