--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,7 +1,7 @@
  {% assign tagsPath = '' %}
     {% if collection.handle == "encomendas" %}
-        <div class="aro-symbol--ss">
-            <a class="icon-link" href="/">{% render 'aro-symbol-cat-page' %}</a>
+        <div>
+            ..
           </div>
           {% else %}
           <div>
