--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,4 +1,4 @@
-    {% if collection.handle == "encomendas" %}
+    {% if collection.handle == 'encomendas' %}
         <div>
             ..
           </div>
