--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,10 +1,10 @@
-    {% if collection.handle == 'sob-encomenda' %}
+    {% if product.collection.handle == 'sob-encomenda' %}
         <div>
             ..
-          </div>
-          {% else %}
-          <div>
+        </div>
+        {% else %}
+        <div>
             :
-          </div>
+        </div>
     {% endif %}
   
