--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,10 +1,11 @@
-    {% if product.collection.handle == 'sob-encomenda' %}
+{% for collection in product.collections %}
+    {% if collection.handle == 'sob-encomenda' %}
         <div>
-            ::
+           <p> ::</P>
         </div>
         {% else %}
         <div>
-            .
+            <p>.</p>
         </div>
     {% endif %}
-  
+{% endfor %}
