--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -1,7 +1,9 @@
 {% for collection in product.collections %}
     {% if collection.handle == 'sob-encomenda' %}
-           <p>Oiê! Temos alguns aviso pra quem quer levar uma peça sob encomenda:</P>
-           <p>Ao fazer o pedido, entre em contato com a gente para informar suar medidas e confirmar o tamanho da peça. <b>Não faremos trocas</b> de peças sob encomenda</p>
-           <p>O prazo de processamento dos pedidos que contenham encomenda é de 15 a 21 dias</p>
+           <ul>
+            <li>Oiê! Temos alguns aviso pra quem quer levar uma peça sob encomenda:</li>
+            <li>Ao fazer o pedido, entre em contato com a gente para informar suar medidas e confirmar o tamanho da peça. <b>Não faremos trocas</b> de peças sob encomenda</li>
+            <li>O prazo de processamento dos pedidos que contenham encomenda é de 15 a 21 dias</li>
+           </ul>
     {% endif %}
 {% endfor %}
