--- a/snippets/texto-encomenda.liquid
+++ b/snippets/texto-encomenda.liquid
@@ -2,8 +2,8 @@
     {% if collection.handle == 'sob-encomenda' %}
         Oiê! Temos alguns aviso pra quem quer levar uma peça sob encomenda:   
         <ul>
-         <li>O prazo de processamento dos pedidos que contenham encomenda é de 15 a 21 dias</li>
-         <li>Ao fazer o pedido, entre em contato com a gente para informar suar medidas e confirmar o tamanho da peça. <b>Não faremos trocas</b> de peças sob encomenda</li>
+         <li>O prazo de processamento dos pedidos que contenham encomenda é de <b>15 a 21 dias</b></li>
+         <li>Ao fazer o pedido, entre em contato com a gente para informar suar medidas e confirmar o tamanho da peça. <b>Não faremos trocas de peças sob encomenda</b></li>
         </ul>
     {% endif %}
 {% endfor %}
