--- a/sections/header-beneficios.liquid
+++ b/sections/header-beneficios.liquid
@@ -1,9 +1,5 @@
 <div class="header-beneficios">
   <div class="header-beneficios__label">
-    Filtre aqui a disponibilidade das peças no seu tamanho:
-  </div>
-
-  <div class="header-beneficios__label">
-    <a href="/pages/tabela-de-medidas">Dúvidas? Dá um confere na nossa tabela.</a>
+    Benefícios como frete gratis acima de 380 e desconto para primeira compra
   </div>
 </div>
