--- a/sections/header2.liquid
+++ b/sections/header2.liquid
@@ -191,7 +191,7 @@
 }
 </script>
 
-{% comment %} {% if template.name == 'index' %}
+{% if template.name == 'index' %}
   {% assign potential_action_target = shop.url | append: "{{ routes.search_url }}?q={search_term_string}" %}
   <script type="application/ld+json">
     {
@@ -206,7 +206,7 @@
       "url": {{ shop.url | append: page.url | json }}
     }
   </script>
-{% endif %} {% endcomment %}
+{% endif %} 
 
 {% schema %}
 {
