--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -151,7 +151,7 @@
     {% include 'cart-popup' %}
   {%- endif -%}
 
-  {% section 'header2' %}
+  {% section 'header' %}
 
   <div class="page-container" id="PageContainer">
 
